--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -23,3 +23,24 @@
     height: auto;
     object-fit: cover;
 }
+
+.cardHome {
+    height: 450px;
+    width: 360px;
+    margin-bottom: 25px !important;
+    margin-top: 25px;
+}
+
+.cardImage {
+    width: 128px;
+    height: auto;
+    margin: 10px 0 10px 0;
+}
+
+.cardImageBg {
+
+}
+
+hr {
+    border-top: 1px solid #212529 !important;
+}
