--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -44,3 +44,9 @@
 hr {
     border-top: 1px solid #212529 !important;
 }
+
+@media (max-width: 575px) {
+    .jumbotron {
+        padding: 3rem 1rem 2rem !important;
+    }
+}
