--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -142,7 +142,7 @@ input[type=text]:focus,
     background-color: #008576!important;
 }
 
-@media (max-width: 575px) {
+@media screen and (min-width: 0) and (max-width: 575px) {
     .jumbotron {
         padding: 3rem 1rem 2rem !important;
     }
