Fixed search bar issue. When I wrote something in input, it created a space below.

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -16,6 +16,10 @@
 }
 
 {/*Search Bar*/}
+form.formOfSearchBar {
+    height: 24px !important;
+}
+
 {/*New class for padding right, because in bootstrap don't exists*/}
 .pr-6 {
     padding-right: 5rem !important;
@@ -40,7 +44,7 @@ input[type=text]:focus,
     border: none;
     position: relative;
     background-color: transparent !important;
-    outline: none !important; 
+    outline: none !important;
 }
 
 .searchBtn:focus {
