--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -69,6 +69,7 @@ input[type=text]:focus,
     cursor: pointer;
     transition: font-size 0.5s ease;
     background-color: transparent;
+    outline: none !important;
 }
 {/*This size of the screen doesn't exists on bootstrap*/}
 @media screen and (min-width: 0) and (max-width: 441px) {
